--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<h1><%= @randwords %></h1>
+<h1><%= @randwords %></h1> <br><A HREF="javascript:history.go(0)">new</A>
 <div id="poem">
   <% if @randtweets.length != 0 %>
   <h2><%= @randtweets %></h2>
@@ -6,3 +6,6 @@
   <h2><A HREF="javascript:history.go(0)">No Tweets Found -- Click To Refresh</A></h2>
     <% end %>
 </div>
+<div>
+  <br>
+  </div>
