--- a/views/index.erb
+++ b/views/index.erb
@@ -6,7 +6,7 @@
   <h2><A HREF="javascript:history.go(0)">No Tweets Found -- Click To Refresh</A></h2>
     <% end %>
     <br><br><br>
-    <A HREF="javascript:history.go(0)">click to refresh</A>
+    <h3><A HREF="javascript:history.go(0)">click to refresh</A></h3>
 </div>
 <div>
   <br>
