--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -12,7 +12,7 @@ h1 {
   color: white;
 }
 
-h2, h2 a, h2 a:hover, h2 a:active, h2 a:visited {
+h2, h2 a, h2 a:hover, h2 a:active, h2 a:visited, h3 a, h3 a:hover, h3 a:active, h3 a:visited {
   font-weight: 400;
   color: white;
   text-decoration: none;
